--- a/index.html
+++ b/index.html
@@ -5,32 +5,47 @@ tagline: （嘘です）
 ---
 {% include JB/setup %}
 
+
+<br>
 <div class="row">
-    <div class="col-md-4 col-sm-4 col-xs-4 tile_stats_count">
+    <div class="col-md-6 col-sm-6 col-xs-6 tile_stats_count">
         <div class="left"></div>
         <div class="right">
-            <span class="count_top"><i class="fa fa-download"></i>&nbsp;Data Science</span>
-            <div class="count">Deep Learning</div>
-            <span class="count_bottom">Learning Note</span>
-            <span class="count_bottom"><p><a class="btn btn-primary btn-xs" href="" role="button">View details &raquo;</a></p></span>
+            <span class="count_top"><i class="fa fa-bar-chart" aria-hidden="true"></i>&nbsp;Data Science</span>
+            <div class="count">Machine Learning</div>
+            <span class="count_bottom">My posts related to SVM, Deep Learning, Neural Network, boosting etc.</span>
+            <span class="count_bottom"><p><a class="btn btn-primary btn-xs" href="machine-learning.html" role="button">View details &raquo;</a></p></span>
         </div>
     </div>
-    <div class="col-md-4 col-sm-4 col-xs-4 tile_stats_count">
+    <div class="col-md-6 col-sm-6 col-xs-6 tile_stats_count">
         <div class="left"></div>
         <div class="right">
-            <span class="count_top"><i class="fa fa-rss"></i>&nbsp;Data Science</span>
-            <div class="count">Pandas & Numpy</div>
-            <span class="count_bottom">Learning Note</span>
-            <span class="count_bottom"><p><a class="btn btn-primary btn-xs" href="" role="button">View details &raquo;</a></p></span>
-        </div>
-    </div>
-    <div class="col-md-4 col-sm-4 col-xs-4 tile_stats_count">
-        <div class="left"></div>
-        <div class="right">
-            <span class="count_top"><i class="fa fa-bar-chart"></i>&nbsp;Data Engineering</span>
-            <div class="count">EMR & Spark</div>
-            <span class="count_bottom">Learning Note</span>
+            <span class="count_top"><i class="fa fa-area-chart" aria-hidden="true"></i>&nbsp;Data Science</span>
+            <div class="count">Data Science with Python</div>
+            <span class="count_bottom">My posts related to Numpy, Pandas etc.</span>
             <span class="count_bottom"><p><a class="btn btn-primary btn-xs" href="" role="button">View details &raquo;</a></p></span>
         </div>
     </div>
 </div>
+<br>
+<div class="row">
+    <div class="col-md-6 col-sm-6 col-xs-6 tile_stats_count">
+        <div class="left"></div>
+        <div class="right">
+            <span class="count_top"><i class="fa fa-database" aria-hidden="true"></i>&nbsp;Data engineering</span>
+            <div class="count">Big Data</div>
+            <span class="count_bottom">My posts related to Spark, EMR, Hive etc.</span>
+            <span class="count_bottom"><p><a class="btn btn-primary btn-xs" href="machine-learning.html" role="button">View details &raquo;</a></p></span>
+        </div>
+    </div>
+    <div class="col-md-6 col-sm-6 col-xs-6 tile_stats_count">
+        <div class="left"></div>
+        <div class="right">
+            <span class="count_top"><i class="fa fa-space-shuttle" aria-hidden="true"></i>&nbsp;Web Service</span>
+            <div class="count">AWS</div>
+            <span class="count_bottom">My posts related to S3, DynamoDB, SQS, SNS etc.</span>
+            <span class="count_bottom"><p><a class="btn btn-primary btn-xs" href="" role="button">View details &raquo;</a></p></span>
+        </div>
+    </div>
+</div>
+<br>
