change nav bar color

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Data Scientist, Software Developer, かかあ天下, 愛妻家
-tagline: （嘘です）
+title: Overview
+tagline: For Data Science and Engineering
 ---
 {% include JB/setup %}
 
@@ -32,7 +32,7 @@ tagline: （嘘です）
     <div class="col-md-6 col-sm-6 col-xs-6 tile_stats_count">
         <div class="left"></div>
         <div class="right">
-            <span class="count_top"><i class="fa fa-database" aria-hidden="true"></i>&nbsp;Data engineering</span>
+            <span class="count_top"><i class="fa fa-database" aria-hidden="true"></i>&nbsp;Data Engineering</span>
             <div class="count">Big Data</div>
             <span class="count_bottom">My posts related to Spark, EMR, Hive etc.</span>
             <span class="count_bottom"><p><a class="btn btn-primary btn-xs" href="machine-learning.html" role="button">View details &raquo;</a></p></span>
