--- a/machine-learning.html
+++ b/machine-learning.html
@@ -5,7 +5,7 @@ description: "List up posts related to Machine Learning"
 ---
 {% include JB/setup %}
 
-<p>Posts in category Machine Learning are:</p>
+<h2>Posts in category Machine Learning:</h2>
 
 <ul>
   {% for post in site.categories.lessons %}
