--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ tagline: For Data Science and Engineering
             <span class="count_top"><i class="fa fa-bar-chart" aria-hidden="true"></i>&nbsp;Data Science</span>
             <div class="count">Machine Learning</div>
             <span class="count_bottom">My posts related to SVM, Deep Learning, Neural Network, boosting etc.</span>
-            <span class="count_bottom"><p><a class="btn btn-primary btn-xs" href="machine-learning.html" role="button">View details &raquo;</a></p></span>
+            <span class="count_bottom"><p><a class="btn btn-default btn-xs" href="category/machine-learning" role="button">View details &raquo;</a></p></span>
         </div>
     </div>
     <div class="col-md-6 col-sm-6 col-xs-6 tile_stats_count">
@@ -23,7 +23,7 @@ tagline: For Data Science and Engineering
             <span class="count_top"><i class="fa fa-area-chart" aria-hidden="true"></i>&nbsp;Data Science</span>
             <div class="count">Data Science with Python</div>
             <span class="count_bottom">My posts related to Numpy, Pandas etc.</span>
-            <span class="count_bottom"><p><a class="btn btn-primary btn-xs" href="" role="button">View details &raquo;</a></p></span>
+            <span class="count_bottom"><p><a class="btn btn-default btn-xs" href="" role="button">View details &raquo;</a></p></span>
         </div>
     </div>
 </div>
@@ -35,7 +35,7 @@ tagline: For Data Science and Engineering
             <span class="count_top"><i class="fa fa-database" aria-hidden="true"></i>&nbsp;Data Engineering</span>
             <div class="count">Big Data</div>
             <span class="count_bottom">My posts related to Spark, EMR, Hive etc.</span>
-            <span class="count_bottom"><p><a class="btn btn-primary btn-xs" href="machine-learning.html" role="button">View details &raquo;</a></p></span>
+            <span class="count_bottom"><p><a class="btn btn-default btn-xs" href="" role="button">View details &raquo;</a></p></span>
         </div>
     </div>
     <div class="col-md-6 col-sm-6 col-xs-6 tile_stats_count">
@@ -44,7 +44,7 @@ tagline: For Data Science and Engineering
             <span class="count_top"><i class="fa fa-space-shuttle" aria-hidden="true"></i>&nbsp;Web Service</span>
             <div class="count">AWS</div>
             <span class="count_bottom">My posts related to S3, DynamoDB, SQS, SNS etc.</span>
-            <span class="count_bottom"><p><a class="btn btn-primary btn-xs" href="" role="button">View details &raquo;</a></p></span>
+            <span class="count_bottom"><p><a class="btn btn-default btn-xs" href="" role="button">View details &raquo;</a></p></span>
         </div>
     </div>
 </div>
