--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ tagline: For Data Science and Engineering
         <div class="left"></div>
         <div class="right">
             <span class="count_top"><i class="fa fa-area-chart" aria-hidden="true"></i>&nbsp;Data Science</span>
-            <div class="count">Data Science with Python</div>
+            <div class="count">Data Wrangling with Python</div>
             <span class="count_bottom">My posts related to Numpy, Pandas etc.</span>
-            <span class="count_bottom"><p><a class="btn btn-default btn-xs" href="category/data-science-with-python" role="button">View details &raquo;</a></p></span>
+            <span class="count_bottom"><p><a class="btn btn-default btn-xs" href="category/data-wrangling-with-python" role="button">View details &raquo;</a></p></span>
         </div>
     </div>
 </div>
