linear regression post

--- a/_posts/2016-11-20-python-02.1-access_log.html
+++ b/_posts/2016-11-20-python-02.1-access_log.html
@@ -1,8 +1,8 @@
 --- 
 layout: post 
 title: Use Pandas to handle access log 
-category: data-wrangling-with-python 
-tag: [python, pandas] 
+category: data-wrangling
+tag: [python, pandas]
 ---
 {% include JB/setup %}
 
