change the title

--- a/_posts/2016-11-22-deep_learning-linear-regression-gradient-decent.html
+++ b/_posts/2016-11-22-deep_learning-linear-regression-gradient-decent.html
@@ -1,6 +1,6 @@
 --- 
 layout: post 
-title: Deep Learning - Use gradient decent with linear regression 
+title: Deep Learning - Linear regression with gradient decent
 category: machine-learning 
 tag: [python, deep-learning] 
 ---
@@ -12,7 +12,7 @@ tag: [python, deep-learning]
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Deep-Learning---Linear-Regression-with-Gradient-Decent">Deep Learning - Linear Regression with Gradient Decent<a class="anchor-link" href="#Deep-Learning---Linear-Regression-with-Gradient-Decent">&#182;</a></h1>
+<h1 id="Deep-Learning---Linear-Regression-with-Gradient-Decent">Linear Regression<a class="anchor-link" href="#Deep-Learning---Linear-Regression-with-Gradient-Decent">&#182;</a></h1>
 </div>
 </div>
 </div>
