remove .ipynb_checkpoints files

--- a/_posts/2016-11-22-deep_learning-linear-regression-gradient-decent.html
+++ b/_posts/2016-11-22-deep_learning-linear-regression-gradient-decent.html
@@ -36,7 +36,7 @@ It might look pretty easy but it's very helpful to increase the understanding of
 <h1 id="Overview">Overview<a class="anchor-link" href="#Overview">&#182;</a></h1><p>This note will covere:</p>
 <ul>
 <li>Prepare the data</li>
-<li>Loss function, chian rule and its derivative</li>
+<li>Loss function, chain rule and its derivative</li>
 <li>Code implementation</li>
 <li>Summary</li>
 </ul>
@@ -444,7 +444,7 @@ DRUmIiIiEhoqTERERCQ0VJiIiIhIaPx/x0bSq05z9hUAAAAASUVORK5CYII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Loss-function,-chian-rule-and-its-derivative">Loss function, chian rule and its derivative<a class="anchor-link" href="#Loss-function,-chian-rule-and-its-derivative">&#182;</a></h1>
+<h1 id="Loss-function,-chain-rule-and-its-derivative">Loss function, chain rule and its derivative<a class="anchor-link" href="#Loss-function,-chain-rule-and-its-derivative">&#182;</a></h1>
 </div>
 </div>
 </div>
