--- a/_posts/2016-11-23-deep_learning-logistic-regression-gradient-decent.html
+++ b/_posts/2016-11-23-deep_learning-logistic-regression-gradient-decent.html
@@ -36,7 +36,7 @@ Logistic regression model can be thought as a neural network without hidden laye
 <h1 id="Overview">Overview<a class="anchor-link" href="#Overview">&#182;</a></h1><p>This note will covere:</p>
 <ul>
 <li>Prepare the data</li>
-<li>Loss function, chian rule and its derivative</li>
+<li>Loss function, chain rule and its derivative</li>
 <li>Code implementation</li>
 </ul>
 
@@ -545,7 +545,7 @@ Vhof8TAzM7PSuPEwMzOz0rjxMDMzs9K48TAzM7PSuPEwMzOz0rjxMDMzs9K48TAzM7PSuPEwMzOz
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Loss-function,-chian-rule-and-its-derivative">Loss function, chian rule and its derivative<a class="anchor-link" href="#Loss-function,-chian-rule-and-its-derivative">&#182;</a></h1>
+<h1 id="Loss-function,-chain-rule-and-its-derivative">Loss function, chain rule and its derivative<a class="anchor-link" href="#Loss-function,-chain-rule-and-its-derivative">&#182;</a></h1>
 </div>
 </div>
 </div>
