--- a/_posts/2016-12-02-deep_learning-neural-network-gradient-decent-part1.html
+++ b/_posts/2016-12-02-deep_learning-neural-network-gradient-decent-part1.html
@@ -1,6 +1,7 @@
 --- 
 layout: post 
-title: Deep Learning - Neural network with 1 hidden layer 
+title: Deep Learning - Neural network - part1
+tagline: ""
 category: machine-learning 
 tag: [python, deep-learning]  
 ---
