--- a/_posts/2016-11-22-deep_learning-linear-regression-gradient-decent.html
+++ b/_posts/2016-11-22-deep_learning-linear-regression-gradient-decent.html
@@ -1,6 +1,6 @@
 --- 
 layout: post 
-title: Deep Learning - Linear regression with gradient decent
+title: Deep Learning - Use gradient decent with linear regression 
 category: machine-learning 
 tag: [python, deep-learning] 
 ---
@@ -12,7 +12,7 @@ tag: [python, deep-learning]
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Deep-Learning---Linear-Regression-with-Gradient-Decent">Linear Regression<a class="anchor-link" href="#Deep-Learning---Linear-Regression-with-Gradient-Decent">&#182;</a></h1>
+<h1 id="Linear-Regression">Linear Regression<a class="anchor-link" href="#Linear-Regression">&#182;</a></h1>
 </div>
 </div>
 </div>
@@ -23,7 +23,6 @@ tag: [python, deep-learning]
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>In this note, I am going to train a linear regression model with <code>gradient decent</code> estimation.
 It might look pretty easy but it's very helpful to increase the understanding of the basics of Deep Learning.</p>
-<p>The sample codes in this note come from <a href="http://peterroelants.github.io/">peterroelants.github.io</a> where providing more details on neural netwrok and deep learning. It's very informative and highly recommanded. Here is more like my personal memo.</p>
 
 </div>
 </div>
@@ -64,7 +63,7 @@ It might look pretty easy but it's very helpful to increase the understanding of
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[10]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">numpy</span> 
@@ -72,16 +71,11 @@ It might look pretty easy but it's very helpful to increase the understanding of
 <span class="o">%</span><span class="k">matplotlib</span> inline
 <span class="n">numpy</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">seed</span><span class="p">(</span><span class="n">seed</span><span class="o">=</span><span class="mi">1</span><span class="p">)</span>
 
-<span class="c1"># Define the vector of input samples as x, with 20 values sampled from a uniform distribution</span>
-<span class="c1"># between 0 and 1</span>
 <span class="n">x</span> <span class="o">=</span> <span class="n">numpy</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">uniform</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">20</span><span class="p">)</span>
 
-<span class="c1"># Generate the target values t from x with small gaussian noise so the estimation won&#39;t</span>
-<span class="c1"># be perfect.</span>
-<span class="c1"># Define a function f that represents the line that generates t without noise</span>
+<span class="c1"># real model</span>
 <span class="k">def</span> <span class="nf">f</span><span class="p">(</span><span class="n">x</span><span class="p">):</span> <span class="k">return</span> <span class="n">x</span> <span class="o">*</span> <span class="mi">2</span>
 
-<span class="c1"># Create the targets t with some gaussian noise</span>
 <span class="n">noise_variance</span> <span class="o">=</span> <span class="mf">0.2</span>  <span class="c1"># Variance of the gaussian noise</span>
 <span class="c1"># Gaussian noise error for each sample in x</span>
 <span class="n">noise</span> <span class="o">=</span> <span class="n">numpy</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">randn</span><span class="p">(</span><span class="n">x</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span> <span class="o">*</span> <span class="n">noise_variance</span>
@@ -96,7 +90,7 @@ It might look pretty easy but it's very helpful to increase the understanding of
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[11]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Plot the target t versus the input x</span>
@@ -483,7 +477,7 @@ $$\Delta w = \mu * 2 * \sum_{i=1}^{N}x_{i}(y_{i}-t_{i})$$</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[22]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Define the neural network function y = x * w</span>
@@ -562,7 +556,7 @@ w(4): 1.9399 	 cost: 0.4510
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[25]:</div>
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Plot the cost vs the given weight w</span>
@@ -1095,4 +1089,14 @@ SimllOu0IFFKKaWU67QgUUoppZTrtCBRSimllOu0IFFKKaWU67QgUUoppZTrtCBRSimllOv+H52t
 </div>
 </div>
 
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>The sample codes in this note come from <a href="http://peterroelants.github.io/">peterroelants.github.io</a> where providing more details on neural netwrok and deep learning. It's very informative and highly recommanded. Here is more like my personal memo.</p>
+
+</div>
+</div>
 </div>
