--- a/_posts/2016-11-23-deep_learning-logistic-regression-gradient-decent.html
+++ b/_posts/2016-11-23-deep_learning-logistic-regression-gradient-decent.html
@@ -1,8 +1,8 @@
 --- 
 layout: post 
-title: Deep Learning - Logistic regression with gradient decent
+title: Deep Learning - Use gradient decent with logistic regression 
 category: machine-learning 
-tag: [python, deep-learning] 
+tag: [python, deep-learning]  
 ---
 {% include JB/setup %}
 
@@ -12,7 +12,7 @@ tag: [python, deep-learning]
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Deep-Learning---Logistic-Regression-with-Gradient-Decent">Logistic Regression<a class="anchor-link" href="#Deep-Learning---Logistic-Regression-with-Gradient-Decent">&#182;</a></h1>
+<h1 id="Logistic-Regression">Logistic Regression<a class="anchor-link" href="#Logistic-Regression">&#182;</a></h1>
 </div>
 </div>
 </div>
@@ -23,7 +23,6 @@ tag: [python, deep-learning]
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>In this note, I am going to train a logistic regression model with <code>gradient decent</code> estimation.
 Logistic regression model can be thought as a neural network without hidden layer and hence a good entry of learning deep learning model.</p>
-<p>The sample codes in this note come from <a href="http://peterroelants.github.io/">peterroelants.github.io</a> where providing more details on neural netwrok and deep learning. It's very informative and highly recommanded. Here is more like my personal memo.</p>
 
 </div>
 </div>
@@ -64,7 +63,7 @@ Logistic regression model can be thought as a neural network without hidden laye
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[26]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span> <span class="c1"># Matrix and vector computation package</span>
@@ -98,7 +97,7 @@ Logistic regression model can be thought as a neural network without hidden laye
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[17]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Plot both classes on the x1, x2 plane</span>
@@ -618,7 +617,7 @@ $$\Delta w_j = \mu * \sum_{i=1}^{N} x_{ij} (y_i - t_i)$$</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[27]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Define the logistic function</span>
@@ -657,7 +656,7 @@ $$\Delta w_j = \mu * \sum_{i=1}^{N} x_{ij} (y_i - t_i)$$</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[25]:</div>
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Plot the cost in function of the weights</span>
@@ -1164,7 +1163,7 @@ RCRyCiAiIiISOQUQERERiZwCiIiIiETu/wGegnWONuLtMQAAAABJRU5ErkJggg==
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[19]:</div>
+<div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># define the gradient function.</span>
@@ -1194,7 +1193,7 @@ RCRyCiAiIiISOQUQERERiZwCiIiIiETu/wGegnWONuLtMQAAAABJRU5ErkJggg==
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[20]:</div>
+<div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Set the initial weight parameter</span>
@@ -1228,7 +1227,7 @@ RCRyCiAiIiISOQUQERERiZwCiIiIiETu/wGegnWONuLtMQAAAABJRU5ErkJggg==
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[24]:</div>
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Plot the first weight updates on the error surface</span>
@@ -1919,4 +1918,14 @@ IAiCINjO/wOuXDQWbB3NeQAAAABJRU5ErkJggg==
 </div>
 </div>
 
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>The sample codes in this note come from <a href="http://peterroelants.github.io/">peterroelants.github.io</a> where providing more details on neural netwrok and deep learning. It's very informative and highly recommanded. Here is more like my personal memo.</p>
+
+</div>
+</div>
 </div>
