--- a/_posts/2016-12-28-deep_learning-recurrent-neural-network.html
+++ b/_posts/2016-12-28-deep_learning-recurrent-neural-network.html
@@ -25,7 +25,8 @@ tag: [python, deep-learning]
 $$S_{k} = f(S_{k-1} * W_{rec} + X_k * W_x)$$</p>
 <p>The model we are going to train is to count how many 1's it sees on a binary input stream, and output the total count at the end of the sequence. Obviously, we know $w_{rec} = w_x = 1$. The point here is to understand the training process of RNN.</p>
 <p>It can also be visicualized as:</p>
-<p align="center"><img src="https://raw.githubusercontent.com/weichetaru/weichetaru.github.com/master/notebook/machine-learning/img/SimpleRNN01.png"></p>
+<p align="center">
+<img src="https://raw.githubusercontent.com/weichetaru/weichetaru.github.com/master/notebook/machine-learning/img/SimpleRNN01.png"></p>
 </div>
 </div>
 </div>
@@ -2339,4 +2340,14 @@ $\Delta(i)=\Delta(i)∗\eta^+$</li>
 </div>
 </div>
 
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>The sample codes in this note come from <a href="http://peterroelants.github.io/">peterroelants.github.io</a> where providing more details on neural netwrok and deep learning. It's very informative and highly recommanded. Here is more like my personal memo.</p>
+
+</div>
+</div>
 </div>
