--- a/index.html
+++ b/index.html
@@ -32,19 +32,40 @@ tagline: For Data Science and Engineering
     <div class="col-md-6 col-sm-6 col-xs-6 tile_stats_count">
         <div class="left"></div>
         <div class="right">
-            <span class="count_top"><i class="fa fa-database" aria-hidden="true"></i>&nbsp;Data Engineering</span>
-            <div class="count">Big Data</div>
-            <span class="count_bottom">My posts related to Spark, EMR, Hive etc.</span>
-            <span class="count_bottom"><p><a class="btn btn-default btn-xs" href="" role="button">View details &raquo;</a></p></span>
+            <span class="count_top"><i class="fa fa-database" aria-hidden="true"></i>&nbsp;Codding</span>
+            <div class="count">Java</div>
+            <span class="count_bottom">My posts related to Java Codding</span>
+            <span class="count_bottom"><p><a class="btn btn-default btn-xs" href="category/java" role="button">View details &raquo;</a></p></span>
         </div>
     </div>
     <div class="col-md-6 col-sm-6 col-xs-6 tile_stats_count">
         <div class="left"></div>
         <div class="right">
-            <span class="count_top"><i class="fa fa-space-shuttle" aria-hidden="true"></i>&nbsp;Web Service</span>
+            <span class="count_top"><i class="fa fa-space-shuttle" aria-hidden="true"></i>&nbsp;Codding</span>
+            <div class="count">Angular</div>
+            <span class="count_bottom">My posts related Angular</span>
+            <span class="count_bottom"><p><a class="btn btn-default btn-xs" href="category/angular" role="button">View details &raquo;</a></p></span>
+        </div>
+    </div>
+</div>
+<br>
+<div class="row">
+    <div class="col-md-6 col-sm-6 col-xs-6 tile_stats_count">
+        <div class="left"></div>
+        <div class="right">
+            <span class="count_top"><i class="fa fa-database" aria-hidden="true"></i>&nbsp;Data Engineering</span>
+            <div class="count">Spark</div>
+            <span class="count_bottom">My posts related to Spark</span>
+            <span class="count_bottom"><p><a class="btn btn-default btn-xs" href="category/spark" role="button">View details &raquo;</a></p></span>
+        </div>
+    </div>
+    <div class="col-md-6 col-sm-6 col-xs-6 tile_stats_count">
+        <div class="left"></div>
+        <div class="right">
+            <span class="count_top"><i class="fa fa-space-shuttle" aria-hidden="true"></i>&nbsp;Cloud</span>
             <div class="count">AWS</div>
             <span class="count_bottom">My posts related to S3, DynamoDB, SQS, SNS etc.</span>
-            <span class="count_bottom"><p><a class="btn btn-default btn-xs" href="" role="button">View details &raquo;</a></p></span>
+            <span class="count_bottom"><p><a class="btn btn-default btn-xs" href="category/aws" role="button">View details &raquo;</a></p></span>
         </div>
     </div>
 </div>
